charts/monitoring/pushgateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: pushgateway.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-prometheus-pushgateway
                port:
                  number: 9091
